--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "type": "module",
   "main": "index.js",
   "bin": {
-    "code": "bin/gendiff.js"
+    "gendiff": "bin/gendiff.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
