--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "dependencies": {
     "commander": "^10.0.0",
-    "eslint": "^8.35.0"
+    "eslint": "^8.35.0",
+    "lodash": "^4.17.21"
   },
   "name": "@hexlet/code",
   "description": "[![Actions Status](https://github.com/Bobronaud/frontend-project-46/workflows/hexlet-check/badge.svg)](https://github.com/Bobronaud/frontend-project-46/actions)",
   "version": "1.0.0",
   "type": "module",
-  "main": "index.js",
+  "main": "src/index.js",
   "bin": {
     "gendiff": "bin/gendiff.js"
   },
