--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "dependencies": {
     "commander": "^10.0.0",
-    "eslint": "^8.35.0",
     "lodash": "^4.17.21"
   },
   "name": "@hexlet/code",
@@ -13,8 +12,12 @@
     "gendiff": "bin/gendiff.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "eslint": "^8.36.0",
+    "jest": "^29.5.0"
+  }
 }
