--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.36.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
     "jest": "^29.5.0"
   }
 }
