--- a/.github/workflows/tests-and-linter.yml
+++ b/.github/workflows/tests-and-linter.yml
@@ -4,8 +4,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: action/checkout@v3.0.0
-      - uses: action/setup-node@v3.0.0
+      - uses: actions/checkout@v3.0.0
+      - uses: actions/setup-node@v3.0.0
       - run: make install
       - run: make lint
       - run: make test
