--- a/.github/workflows/tests-and-linter.yml
+++ b/.github/workflows/tests-and-linter.yml
@@ -9,8 +9,10 @@ jobs:
       - run: make install
       - run: make lint
       - run: make test
-      - uses: paambaati/codeclimate-action@v3.0.0
+      - name: test and publish code coverage
+      uses: paambaati/codeclimate-action@v3.0.0
       env:
       CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
       with:
       coverageCommand: make test-coverage
+      debug: true
