--- a/.github/workflows/tests-and-linter.yml
+++ b/.github/workflows/tests-and-linter.yml
@@ -12,7 +12,7 @@ jobs:
       - name: test and publish code coverage
       uses: paambaati/codeclimate-action@v3.0.0
       env:
-      CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+      CODECLIMATE_TEST_COVERAGE: ${{ secrets.CODECLIMATE_TEST_COVERAGE }}
       with:
       coverageCommand: make test-coverage
       debug: true
