try to fix node-version in workflow

--- a/.github/workflows/tests-and-linter.yml
+++ b/.github/workflows/tests-and-linter.yml
@@ -3,11 +3,16 @@ on: push
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [18.x]
     steps:
       - uses: actions/checkout@v3.0.0
-      - uses: actions/setup-node@v3.0.0
-      with:
-      node-version: 18.x
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3.0.0
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
       - run: make install
       - run: make lint
       - run: make test
