--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "lodash": "^4.17.21"
   },
   "name": "@hexlet/code",
-  "description": "[![Actions Status](https://github.com/Bobronaud/frontend-project-46/workflows/hexlet-check/badge.svg)](https://github.com/Bobronaud/frontend-project-46/actions)",
+  "description": "generates difference of two files in JSON or YAML extansion",
   "version": "1.0.0",
   "type": "module",
   "main": "src/index.js",
